--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -153,4 +153,8 @@
     <!-- qqs scroller -->
     <string name="qqs_scroll_title">Scroll small QS tiles</string>
     <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
+
+    <!-- Disable quick settings on lock screen switch -->
+    <string name="lockscreen_qs_disabled_title">Quick settings disabled on lock screen</string>
+    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings and keyguard shortcuts on secure lock screens</string>
 </resources>
