Ability to hide superuser status bar icon [2/2]
AICPfy:
- False by default

Change-Id: I2da70a5b8dd94791f289504164d8e38326e71c6d
Signed-off-by: LorDClockaN <lordclockan@gmail.com>

Conflicts:
	res/xml/statusbar_layout.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -30,4 +30,9 @@
     <!-- QuickSettings haptic feedback -->
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
+
+    <!-- Superuser indicator on status bar -->
+    <string name="su_indicator">Superuser indicator</string>
+    <string name="su_indicator_summary_on">Superuser indicator is visible when a session is active</string>
+    <string name="su_indicator_summary_off">Toggle to show superuser indicator when a session is active</string>
 </resources>
