Network traffic settings[2/2]
Revert removing network traffic settings during
https://github.com/AICP/packages_apps_AicpExtras/commit/c6eb3230250de7d6e6e8e4c1f6ad201f98be9bbd

Change-Id: Ibbd8b2d3d648afa541b79f309d51c2efd779bb66

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -100,6 +100,12 @@
         android:summaryOff="@string/su_indicator_summary_off"
         android:defaultValue="false" />
 
+     <PreferenceScreen
+        android:key="traffic"
+        android:fragment="org.cyanogenmod.cmparts.custom.Traffic"
+	android:summary="@string/network_traffic_summary"
+	android:title="@string/network_traffic_title" />
+
     <PreferenceCategory
         android:key="quicksettings_tiles_category"
         android:title="@string/quicksettings_tiles_category">
