--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="navbar_edit_icon_color">#607d8b</color>
     <color name="divider">#ffe0e0e0</color>
     <color name="setup_wizard_wifi_color_dark">#89ffffff</color>
+    <color name="seekbar_dot_color">@color/colorPrimary</color>
+    <color name="colorPrimary">#212121</color>
 
     <color name="divider_color">#20ffffff</color>
 
