Battery bar settings
Revert removal of battery bar settings during
https://github.com/AICP/packages_apps_AicpExtras/commit/c6eb3230250de7d6e6e8e4c1f6ad201f98be9bbd

Disable navigation bar location entries for now, let's wait for DUI

Change-Id: Ia5647e85ce353db86f05f5ca0d35bd1aa1242415

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -106,6 +106,12 @@
 	android:summary="@string/network_traffic_summary"
 	android:title="@string/network_traffic_title" />
 
+     <PreferenceScreen
+        android:key="batterybar"
+        android:fragment="org.cyanogenmod.cmparts.custom.BatteryBar"
+	android:summary="@string/battery_bar_summary"
+	android:title="@string/battery_bar_title" />
+
     <PreferenceCategory
         android:key="quicksettings_tiles_category"
         android:title="@string/quicksettings_tiles_category">
