--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -132,4 +132,8 @@
     <!-- QS tile labels visibility -->
     <string name="qs_menu_item_titles">Hide QS tile labels</string>
     <string name="qs_menu_item_titles_summary">Quick tile labels in notification drawer will be hidden if true</string>
+
+    <!-- Disable music track title in QS tile -->
+    <string name="qs_music_tile_track_optional_title">Music tile track title</string>
+    <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
 </resources>
