--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -128,4 +128,8 @@
     <string name="qs_set_animation_style">%1$s</string>
     <string name="qs_set_animation_duration">%1$s</string>
     <string name="qs_set_animation_interpolator">%1$s</string>
+
+    <!-- QS tile labels visibility -->
+    <string name="qs_menu_item_titles">Hide QS tile labels</string>
+    <string name="qs_menu_item_titles_summary">Quick tile labels in notification drawer will be hidden if true</string>
 </resources>
