--- a/res/xml/qs_layout.xml
+++ b/res/xml/qs_layout.xml
@@ -18,6 +18,12 @@
         android:key="quicksettings_tiles_category"
         android:title="@string/quicksettings_tiles_category">
 
+    <cyanogenmod.preference.SystemSettingSwitchPreference
+        android:key="qs_tile_title_visibility"
+        android:title="@string/qs_menu_item_titles"
+        android:summary="@string/qs_menu_item_titles_summary"
+        android:defaultValue="false" />
+
     <ListPreference
         android:key="sysui_qqs_count_key"
         android:title="@string/sysui_qqs_count_title"
