--- a/res/xml/qs_layout.xml
+++ b/res/xml/qs_layout.xml
@@ -31,6 +31,12 @@
         android:summary="@string/qs_music_tile_track_optional_summary"
         android:defaultValue="false"/>
 
+    <cyanogenmod.preference.SecureSettingSwitchPreference
+        android:key="qs_battery_easy_toggle"
+        android:title="@string/qs_battery_easy_toggle_title"
+        android:summary="@string/qs_battery_easy_toggle_summary"
+        android:defaultValue="false" />
+
     <ListPreference
         android:key="sysui_qqs_count_key"
         android:title="@string/sysui_qqs_count_title"
