QS: WiFi easy toggle [1/2]
Add an option to enable single click on the WiFi tile to turn it on or off

Change-Id: I92b631134671124b8e404b4947fcd118ab813bd1

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -145,4 +145,8 @@
     <!-- BT easy toggle -->
     <string name="qs_bt_easy_toggle_title">Bluetooth tile easy toggle</string>
     <string name="qs_bt_easy_toggle_summary">Enable one tap action to enable or disable Bluetooth</string>
+
+    <!-- WiFi easy toggle -->
+    <string name="qs_wifi_easy_toggle_title">WiFi tile easy toggle</string>
+    <string name="qs_wifi_easy_toggle_summary">Enable one tap action to enable or disable WiFi</string>
 </resources>
