--- a/res/xml/qs_layout.xml
+++ b/res/xml/qs_layout.xml
@@ -32,6 +32,12 @@
         android:defaultValue="false"/>
 
     <cyanogenmod.preference.SecureSettingSwitchPreference
+        android:key="qs_wifi_easy_toggle"
+        android:title="@string/qs_wifi_easy_toggle_title"
+        android:summary="@string/qs_wifi_easy_toggle_summary"
+        android:defaultValue="false" />
+
+    <cyanogenmod.preference.SecureSettingSwitchPreference
         android:key="qs_bt_easy_toggle"
         android:title="@string/qs_bt_easy_toggle_title"
         android:summary="@string/qs_bt_easy_toggle_summary"
