CMParts: all tile scroller for quickbar settings [2/2]
Change-Id: Ied2b7873780ea1d477c1e3d5222d5f5864726f31

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -149,4 +149,8 @@
     <!-- WiFi easy toggle -->
     <string name="qs_wifi_easy_toggle_title">WiFi tile easy toggle</string>
     <string name="qs_wifi_easy_toggle_summary">Enable one tap action to enable or disable WiFi</string>
+
+    <!-- qqs scroller -->
+    <string name="qqs_scroll_title">Scroll small QS tiles</string>
+    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
 </resources>
