--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -111,6 +111,12 @@
         android:dependency="qs_show_brightness"
         android:defaultValue="true"/>
 
+    <cyanogenmod.preference.CMSystemSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
