--- a/res/xml/qs_layout.xml
+++ b/res/xml/qs_layout.xml
@@ -11,8 +11,7 @@
      limitations under the License.
 -->
 <PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aicpextras="http://schemas.android.com/apk/res/org.cyanogenmod.cmparts">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
         android:key="quicksettings_tiles_category"
