Revert "CMParts: fix Fragment derp in Batterybar and QS settings"
This reverts commit 273790b1b52dceab4fca55b1e497a4149d1cc06e.

--- a/res/xml/qs_layout.xml
+++ b/res/xml/qs_layout.xml
@@ -11,7 +11,8 @@
      limitations under the License.
 -->
 <PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aicpextras="http://schemas.android.com/apk/res/org.cyanogenmod.cmparts">
 
     <PreferenceCategory
         android:key="quicksettings_tiles_category"
