--- a/res/xml/battery_bar.xml
+++ b/res/xml/battery_bar.xml
@@ -37,7 +37,7 @@
         android:title="@string/battery_bar_battery_low_color"
         android:defaultValue="0xffffffff" />
 
-    <cyanogenmod.preference.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="battery_bar_enable_charging_color"
         android:title="@string/battery_bar_use_charging_color"
         android:defaultValue="true" />
@@ -48,13 +48,13 @@
         android:defaultValue="0xffffffff"
         android:dependency="battery_bar_enable_charging_color" />
 
-    <cyanogenmod.preference.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="battery_bar_blend_color"
         android:title="@string/battery_bar_blend_color_title"
         android:summary="@string/battery_bar_blend_color_summary"
         android:defaultValue="false" />
 
-    <cyanogenmod.preference.SystemSettingSwitchPreference
+    <SwitchPreference
         android:key="battery_bar_blend_color_reverse"
         android:title="@string/battery_bar_blend_color_reverse_title"
         android:summaryOn="@string/battery_bar_blend_color_reverse_summary_on"
