Settings: Add pocket lock toggle
Change-Id: I398c8f0be23c27cbcf1fb57eed44a801b31bc6c9
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -314,6 +314,11 @@
         android:key="anbi"
         android:title="@string/anbi_title"
         android:summary="@string/anbi_summary" />
+
+    <cyanogenmod.preference.SystemSettingSwitchPreference
+        android:key="pocket_judge"
+        android:title="@string/pocket_judge_title"
+        android:summary="@string/pocket_judge_summary" />
     </PreferenceCategory>
 
 </PreferenceScreen>
