CMparts: Fix derp in Qs_layout and Traffic to use minimum instead

--- a/res/xml/qs_layout.xml
+++ b/res/xml/qs_layout.xml
@@ -12,6 +12,7 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aicpextras="http://schemas.android.com/apk/res/org.cyanogenmod.cmparts"
         android:key="quicksettings_tiles_category"
         android:title="@string/quicksettings_tiles_category">
 
