--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -19,6 +19,12 @@
         android:key="button_settings"
         android:title="@string/button_pref_title">
 
+    <PreferenceScreen
+        android:key="pie_settings"
+        android:title="@string/pie_settings"
+        android:summary="@string/pie_settings_summary"
+        android:fragment="org.cyanogenmod.cmparts.custom.PieSettings" />
+
     <SwitchPreference
         android:key="disable_nav_keys"
         android:title="@string/disable_navkeys_title"
