ButtonsSettings: Add preference for Accidental Touch
Change-Id: Ica68ed2ddc59a22ce8382e2615a72514c399b226
Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -306,4 +306,14 @@
             android:summary="@string/swap_volume_buttons_summary" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="custom_keys"
+        android:title="@string/custom_keys_title">
+
+    <cyanogenmod.preference.SystemSettingSwitchPreference
+        android:key="anbi"
+        android:title="@string/anbi_title"
+        android:summary="@string/anbi_summary" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
