--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -218,4 +218,17 @@
         <item>8</item>
         <item>9</item>
     </string-array>
+
+    <!-- Battery tile style -->
+    <string-array name="battery_tile_style_entries" translatable="false">
+        <item>@string/status_bar_battery_style_icon_portrait</item>
+        <item>@string/status_bar_battery_style_icon_landscape</item>
+        <item>@string/status_bar_battery_style_circle</item>
+   </string-array>
+
+   <string-array name="battery_tile_style_values" translatable="false">
+       <item>0</item>
+       <item>5</item>
+       <item>2</item>
+   </string-array>
 </resources>
