--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -153,4 +153,12 @@
 
     <string name="qs_running_services_title">Running Services Icon</string>
     <string name="qs_running_services_summary">Disable the tile running services icon in the header</string>
+
+    <!-- Battery tile style-->
+    <string name="battery_tile_style_title">Battery tile style</string>
+
+    <!-- Battery strings -->
+    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
+    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
+    <string name="status_bar_battery_style_circle">Circle</string>
 </resources>
