--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -163,7 +163,9 @@
     <string name="status_bar_battery_style_circle">Circle</string>
 
     <!-- Pie -->
+    <string name="pie_enable_title">Enable pie control</string>
     <string name="pie_settings">Pie settings</string>
+    <string name="pie_enable_title">Enable Pie</string>
     <string name="pie_settings_summary">Adjust pie to your liking</string>
     <string name="pie_theme_mode_title">Theme</string>
     <string name="pie_auto">Automatic</string>
@@ -178,6 +180,11 @@
     <string name="pie_status_mobile">Mobile network only</string>
     <string name="pie_status_none">None</string>
     <string name="pie_status_both">Both</string>
+    <string name="pa_pie_gravity_title">Pie Gravity</string>
+    <string name="pa_pie_gravity_summary">Select the location where the Pie will be placed</string>
+    <string name="pa_pie_gravity_bottom">Bottom</string>
+    <string name="pa_pie_gravity_right">Right</string>
+    <string name="pa_pie_gravity_left">Left</string>
 
     <!-- ANBI -->
     <string name="anbi_title">Accidental touch</string>
